k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-depl
spec: 
  replicas: 1 
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: guerrerocristian/event-bus
---
apiVersion: v1
kind: Service
metadata: 
  name: event-bus-clusterip-srv
spec:
  selector: 
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 3003
      targetPort: 3000
