k8s/prestamo.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestamos-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prestamos
  template:
    metadata:
      labels:
        app: prestamos
    spec:
      containers:
        - name: prestamos
          image: guerrerocristian/prestamos

---
apiVersion: v1
kind: Service
metadata:
  name: prestamos-clusterip-srv
spec:
  selector:
    app: prestamos
  type: ClusterIP
  ports:
    - name: prestamos
      protocol: TCP
      port: 3000
      targetPort: 3000
#create secret object
# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=privatekey
