k8s/usuarios-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: guerrerocristian/usuarios

---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-clusterip-srv
spec:
  selector:
    app: usuarios
  type: ClusterIP
  ports:
    - name: usuarios
      protocol: TCP
      port: 3000
      targetPort: 3000
#create secret object
# kubectl create secret generic jwt-secret --from-literal=JWT_KEY=privatekey
