k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: biblioteca.dev
      http: 
        paths:
          - path: /api/usuarios/?(.*)
            pathType: Prefix
            backend:
              serviceName: usuarios-clusterip-srv
              servicePort: 3000
          - path: /api/libros/?(.*)
            pathType: Prefix
            backend:
              serviceName: libros-clusterip-srv
              servicePort: 3001
          - path: /api/prestamos/?(.*)
            pathType: Prefix
            backend:
              serviceName: prestamos-clusterip-srv
              servicePort: 3002
